--- a/index.html
+++ b/index.html
@@ -16,18 +16,8 @@
         <li><a href="eten_twee.php">Laten zien</a></li>
         <li><a href="eten_drie.html">Veranderen</a></li>
         <li><a href="eten_vier.html">Verwijderen</a></li>
-        <li><a href="import.html">Importeren</a></li>
+        <li><a href="import.php">Importeren</a></li>
     </ul>
-
-    <h2>Klanten</h2>
-
-    <ul>
-        <li><a href="klant_een.html">Aanmaken klant</a></li>
-        <li><a href="klant_twee.html">Laten zien klant</a></li>
-        <li><a href="klant_drie.html">Veranderen klant</a></li>
-        <li><a href="klant_vier.html">Verwijderen</a></li>
-    </ul>
-
 </div>
 
 </body>
